--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,24 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
+  "name": "dever-studio",
+  "version": "1.0.0",
+  "description": "merch shop",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/EverQest/Dever_studio-trying-React.js-.git"
+  },
+  "keywords": [
+    "js",
+    "shop",
+    "scss"
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "author": "Yehor Denysov",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/EverQest/Dever_studio-trying-React.js-/issues"
+  },
+  "homepage": "https://github.com/EverQest/Dever_studio-trying-React.js-#readme"
 }
